# AISTM7

./: .gitignore  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-STEPS.md  README.md  STAGE4-CHANGELOG.md  create-stage4.sh  critical-path.md  docker-compose.yml  git-setup.sh  lighthouse.config.js  package-lock.json  project-status.md  setup-env.sh  setup-realtime.sh  setup-stage4-automated.sh  setup.sh  switch-to-stage3.sh  verify-stage3.sh
.aws/: task-definition.json
.netlify/: state.json
backend/: .env  .env.example  .eslintrc.js  .prettierrc.js  Dockerfile  jest.config.js  package-lock.json  package.json  requirements.txt  server.js  setup.py
backend/models/: user.js  (+5 more)
blockchain/: Anchor.toml  package.json  tsconfig.json
blockchain/programs/aistm7_token/: Cargo.toml
blockchain/programs/aistm7_token/src/: lib.rs
docs/: api.md  deployment-guide.md  deployment-plan.md  deployment.md  development.md  env-setup.md  environment-variables.md  ibkr-setup.md  monitoring.md  netlify-setup.md  progress.md  setup-guide.md  setup-steps.md  token-system-setup.md  ui-mockup.md
frontend/: Dockerfile  build-and-deploy.sh  install-types.sh  jest.config.js  netlify.toml  next.config.js  package-lock.json  package.json  redeploy.sh  setup-local.sh  tailwind.config.ts
scripts/: deploy-token-system.js  deploy.sh  generate-secrets.ps1  init-git.ps1  init-repo.sh  monitor-token-system.js  pre-deployment-check.sh  security-check.sh  setup-environment.sh  setup-netlify.js  setup-project.ps1  test-token-system.js  update-github.ps1
security-reports/: security-summary.md  snyk-report.json
(+289 files in other folders)
