[package]
name = "aistm7_token"
version = "0.1.0"
description = "AISTM7 Token Program with dynamic balance requirements"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aistm7_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
pyth-sdk-solana = "0.7.1"
solana-program = "1.16.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"